Revision history for App-DBBrowser


2.036    2018-12-24
        - Update subqueries.
        - SQLite: make truncate return a numeric value.
        - Bugfixes in "col_function" and "history_stmt".

2.035    2018-12-20
        - "DBD::MariaDB" database plugin.

2.034    2018-12-19
        - New option "guess data type".
        - Update option "auto increment column".
        - Bugfix in "insert_into" menu.
        - Filename extension: max length from 3 to 4.
        - Select columns: allow to select more than one column at a time.

2.033    2018-12-10
        - "Term::Choose" minimum version: '1.638'.
        - "Term::TablePrint" mininum version: '0.104'.

2.032    2018-12-09
        - New option 'decimal_separator'.

2.031    2018-11-29
        - MSWin32: set codepage temporarily to 65001.
        - Removed "no warnings 'utf8'".

2.030    2018-11-28
        - Update documentation.

2.029    2018-11-27
        - Update documentation.

2.028    2018-11-25
        - New option to disable "File::Find" warnings.

2.027    2018-11-23
        - Added option 'color'.
        - "Term::Choose" => '1.634'.
        - "Term::Choose::Util" => '0.068'.
        - "Term::Form" => '0.502'.
        - "Term::TablePrint" => '0.100'.

2.026    2018-11-11
        - File::Find: disable warnings if OS is MSWin32.

2.025    2018-08-13
        - Removed "Term::ProgressBar" from the dependencies since "Term::TablePrint" has now its own progress bar module.
        - Minimum version "Term::TablePrint" is "0.072".

2.024    2018-08-11
        - Add "Term::ProgressBar" to the dependencies (because "Term::ProgressBar" is now optional in "Term::TablePrint").

2.023    2018-08-07
        - The Insert key goes back 25 pages, the Delete key goes forward 25 pages.
        - Minimum version "Term::Choose" is "1.621".
        - Minimum version "Term::TablePrint" is "0.070".

2.022    2018-08-04
        - Bugfix in 'add_subqueries'.

2.021    2018-07-20
        - Output tweaking.